# stock_vision

./: .gitignore  README.md  data_extractor.ipynb  main.py  pyproject.toml
.claude/: settings.json
scripts/: pre_commit_test.sh
src/backtest/: engine.py  metrics.py  validation.py
src/collectors/: kr_collector.py  us_collector.py
src/factors/: fundamental.py  technical.py
src/predictor/: __init__.py  data_collector.py  display.py  feature_builder.py  model.py  predictor.py  validator.py
src/scoring/: composite.py
tests/: conftest.py  test_backtest_engine.py  test_backtest_metrics.py  test_composite.py  test_fundamental.py  test_predictor_feature_builder.py  test_predictor_model.py  test_predictor_validator.py  test_technical.py
