[project]
name = "stock-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "yfinance>=0.2.50",
    "finance-datareader>=0.9.50",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "tqdm>=4.67",
    "pyarrow>=18.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
